# governOS

./: .eslintignore  .eslintrc.cjs  .gitignore  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DESIGN.md  Dockerfile.api  Dockerfile.python  Dockerfile.web  GOVERNANCE.md  MAINTAINERS.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  architecture_proposal.md  docker-compose.yml  final_report.md  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci-quality.yml  ci.yml  deploy-ghpages.yml  helm-lint.yml  pages.yml  release.yml  security.yml
.jules/: bolt.md  palette.md  sentinel.md
apps/api/: .gitignore  Dockerfile  package.json  pnpm-lock.yaml
apps/web/: index.html  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
apps/worker/: Dockerfile
docs/: api.md  architecture.md  audit_and_plan.md  configuration.md  deployment.md  examples.md  faq.md  getting-started.md  glossary.md  index.md  installation.md  internals.md  performance.md  security.md  troubleshooting.md
docs/api/: reference.md  sdk.md
docs/architecture/: action-contract.md  data-flow.md  deployment.md  (+2 more)
governos/: api.py  graph.py  logger.py  models.py  orchestrator.py  parser.py
intentgraph/: api.py  graph.py  orchestrator.py  parser.py
tests/: test_graph.py  test_orchestrator.py  test_parser.py
(+109 files in other folders)
